--- a/mongoid.yml
+++ b/mongoid.yml
@@ -5,3 +5,11 @@ production:
       options:
         skip_version_check: true
         safe: true
+
+
+# development:
+#   sessions:
+#     default:
+#       database: mongoid
+#       hosts:
+#         - localhost:27017
