--- a/mongoid.yml
+++ b/mongoid.yml
@@ -1,15 +1,15 @@
-# production:
-#   sessions:
-#     default:
-#       uri: <%= ENV['MONGOHQ_URL'] %>
-#       options:
-#         skip_version_check: true
-#         safe: true
-
-
-development:
+production:
   sessions:
     default:
-      database: mongoid
-      hosts:
-        - localhost:27017
+      uri: <%= ENV['MONGOHQ_URL'] %>
+      options:
+        skip_version_check: true
+        safe: true
+
+
+# development:
+#   sessions:
+#     default:
+#       database: mongoid
+#       hosts:
+#         - localhost:27017
